Update output path

--- a/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous _monitoring_pipeline.ipynb
+++ b/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous _monitoring_pipeline.ipynb
@@ -292,7 +292,7 @@
     "\n",
     "eval_results_output = Output(\n",
     "    # Provide custom flow output file path if needed\n",
-    "    path=\"azureml://subscriptions/ac0c693d-f31e-4fb1-9fdf-0cbddd556fb7/resourcegroups/rg-khia3sharinghub/workspaces/khi-a3-sharing/datastores/workspaceblobstore/paths/data_ingestion_eval/\",\n",
+    "    path=\"azureml://datastores/<data_store_name>/paths/<path>\",\n",
     "    type=AssetTypes.URI_FOLDER,\n",
     "    # rw_mount is suggested for flow output\n",
     "    mode=\"rw_mount\",\n",
