Change dataset to jsonl

--- a/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
+++ b/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
@@ -285,7 +285,7 @@
    "outputs": [],
    "source": [
     "data_input = Input(\n",
-    "    path=\"./data/monitoring_dataset.csv\",\n",
+    "    path=\"./data/monitoring_dataset.jsonl\",\n",
     "    type=AssetTypes.URI_FILE,\n",
     "    mode=\"mount\",\n",
     ")\n",
@@ -347,7 +347,7 @@
     "    # If the workspace has been created with Azure AI Studio is inside a hub,\n",
     "    # a Compute Cluster cannot be used, use a Serverless instance instead.\n",
     "    chat_flow_node.environment_variables = {\n",
-    "        \"PF_INPUT_FORMAT\": \"csv\",\n",
+    "        \"PF_INPUT_FORMAT\": \"jsonl\",\n",
     "    }\n",
     "    chat_flow_node.compute = \"serverless\"\n",
     "    chat_flow_node.resources = {\"instance_count\": parallel_node_count}\n",
@@ -399,7 +399,7 @@
     "    # If the workspace has been created with Azure AI Studio is inside a hub,\n",
     "    # a Compute Cluster cannot be used, use a Serverless instance instead.\n",
     "    eval_qna_rag_metrics_node.environment_variables = {\n",
-    "        \"PF_INPUT_FORMAT\": \"csv\",\n",
+    "        \"PF_INPUT_FORMAT\": \"jsonl\",\n",
     "    }\n",
     "    eval_qna_rag_metrics_node.compute = \"serverless\"\n",
     "    eval_qna_rag_metrics_node.resources = {\"instance_count\": parallel_node_count}\n",
@@ -443,7 +443,7 @@
     "    # If the workspace has been created with Azure AI Studio is inside a hub,\n",
     "    # a Compute Cluster cannot be used, use a Serverless instance instead.\n",
     "    eval_perceived_intelligence_node.environment_variables = {\n",
-    "        \"PF_INPUT_FORMAT\": \"csv\",\n",
+    "        \"PF_INPUT_FORMAT\": \"jsonl\",\n",
     "    }\n",
     "    eval_perceived_intelligence_node.compute = \"serverless\"\n",
     "    eval_perceived_intelligence_node.resources = {\"instance_count\": parallel_node_count}\n",
@@ -483,7 +483,7 @@
     "    # If the workspace has been created with Azure AI Studio is inside a hub,\n",
     "    # a Compute Cluster cannot be used, use a Serverless instance instead.\n",
     "    simple_summarization_node.environment_variables = {\n",
-    "        \"PF_INPUT_FORMAT\": \"csv\",\n",
+    "        \"PF_INPUT_FORMAT\": \"jsonl\",\n",
     "    }\n",
     "    simple_summarization_node.compute = \"serverless\"\n",
     "    simple_summarization_node.resources = {\"instance_count\": parallel_node_count}\n",
