Fix for guidelines

--- a/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
+++ b/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
@@ -200,7 +200,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_qna_rag_metrics_component = load_component(\"../../../flows/evaluation/eval-qna-rag-metrics/flow.dag.yaml\")"
+    "eval_qna_rag_metrics_component = load_component(\n",
+    "    \"../../../flows/evaluation/eval-qna-rag-metrics/flow.dag.yaml\"\n",
+    ")"
    ]
   },
   {
@@ -216,7 +218,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_perceived_intelligence_component = load_component(\"../../../flows/evaluation/eval-perceived-intelligence/flow.dag.yaml\")"
+    "eval_perceived_intelligence_component = load_component(\n",
+    "    \"../../../flows/evaluation/eval-perceived-intelligence/flow.dag.yaml\"\n",
+    ")"
    ]
   },
   {
@@ -232,7 +236,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "simple_summarization_component = load_component(\"../flows/standard/simple-summarization/flow.dag.yaml\")"
+    "simple_summarization_component = load_component(\n",
+    "    \"../flows/standard/simple-summarization/flow.dag.yaml\"\n",
+    ")"
    ]
   },
   {
@@ -248,7 +254,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_summarization_component = load_component(\"../../../flows/evaluation/eval-summarization/flow.dag.yaml\")"
+    "eval_summarization_component = load_component(\n",
+    "    \"../../../flows/evaluation/eval-summarization/flow.dag.yaml\"\n",
+    ")"
    ]
   },
   {
@@ -267,8 +275,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "convert_parquet_component = load_component(\"./components/convert_parquet/convert_parquet.yaml\")"
+    "convert_parquet_component = load_component(\n",
+    "    \"./components/convert_parquet/convert_parquet.yaml\"\n",
+    ")"
    ]
   },
   {
@@ -330,14 +339,14 @@
     "        data=pipeline_input_data,\n",
     "        # Declare which column of input data should be mapped to flow input\n",
     "        # the value pattern follows ${data.<column_name_from_data_input>}\n",
-    "        chat_history='${data.chat_history}',\n",
-    "        question='${data.question}',\n",
+    "        chat_history=\"${data.chat_history}\",\n",
+    "        question=\"${data.question}\",\n",
     "        # Provide the connection values of the flow component\n",
     "        # The value of connection and deployment_name should align with your workspace connection settings.\n",
     "        connections={\n",
     "            \"chat\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
-    "                \"deployment_name\": \"gpt-35-turbo\"\n",
+    "                \"deployment_name\": \"gpt-35-turbo\",\n",
     "            }\n",
     "        },\n",
     "    )\n",
@@ -371,26 +380,26 @@
     "        run_outputs=chat_flow_node.outputs.flow_outputs,\n",
     "        # Declare which column of input data should be mapped to flow input\n",
     "        # the value pattern follows ${data.<column_name_from_data_input>}\n",
-    "        documents='${data.documents}',\n",
-    "        question='${data.question}',\n",
+    "        documents=\"${data.documents}\",\n",
+    "        question=\"${data.question}\",\n",
     "        # Declare which column of previous node output should be mapped to flow input\n",
     "        # the value pattern follows ${run.outputs.<column_name_from_data_input>}\n",
-    "        answer='${run.outputs.answer}',\n",
+    "        answer=\"${run.outputs.answer}\",\n",
     "        # Provide the connection values of the flow component\n",
     "        # The value of connection and deployment_name should align with your workspace connection settings.\n",
     "        connections={\n",
     "            \"gpt_groundedness\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
-    "                \"deployment_name\": \"gpt-35-turbo\"\n",
+    "                \"deployment_name\": \"gpt-35-turbo\",\n",
     "            },\n",
     "            \"gpt_relevance\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
-    "                \"deployment_name\": \"gpt-35-turbo\"\n",
+    "                \"deployment_name\": \"gpt-35-turbo\",\n",
     "            },\n",
     "            \"gpt_retrieval_score\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
-    "                \"deployment_name\": \"gpt-35-turbo\"\n",
-    "            }\n",
+    "                \"deployment_name\": \"gpt-35-turbo\",\n",
+    "            },\n",
     "        },\n",
     "    )\n",
     "\n",
@@ -423,17 +432,17 @@
     "        run_outputs=chat_flow_node.outputs.flow_outputs,\n",
     "        # Declare which column of input data should be mapped to flow input\n",
     "        # the value pattern follows ${data.<column_name_from_data_input>}\n",
-    "        question='${data.question}',\n",
-    "        context='${data.context}',\n",
+    "        question=\"${data.question}\",\n",
+    "        context=\"${data.context}\",\n",
     "        # Declare which column of previous node output should be mapped to flow input\n",
     "        # the value pattern follows ${run.outputs.<column_name_from_data_input>}\n",
-    "        answer='${run.outputs.answer}',\n",
+    "        answer=\"${run.outputs.answer}\",\n",
     "        # Provide the connection values of the flow component\n",
     "        # The value of connection and deployment_name should align with your workspace connection settings.\n",
     "        connections={\n",
     "            \"gpt_perceived_intelligence\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
-    "                \"deployment_name\": \"gpt-35-turbo\"\n",
+    "                \"deployment_name\": \"gpt-35-turbo\",\n",
     "            }\n",
     "        },\n",
     "    )\n",
@@ -467,13 +476,13 @@
     "        run_outputs=chat_flow_node.outputs.flow_outputs,\n",
     "        # Declare which column of previous node output should be mapped to flow input\n",
     "        # the value pattern follows ${run.outputs.<column_name_from_data_input>}\n",
-    "        answer='${run.outputs.answer}',\n",
+    "        answer=\"${run.outputs.answer}\",\n",
     "        # Provide the connection values of the flow component\n",
     "        # The value of connection and deployment_name should align with your workspace connection settings.\n",
     "        connections={\n",
     "            \"summarize_text_content\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
-    "                \"deployment_name\": \"gpt-35-turbo\"\n",
+    "                \"deployment_name\": \"gpt-35-turbo\",\n",
     "            }\n",
     "        },\n",
     "    )\n",
@@ -507,10 +516,10 @@
     "        run_outputs=chat_flow_node.outputs.flow_outputs,\n",
     "        # Declare which column of input data should be mapped to flow input\n",
     "        # the value pattern follows ${data.<column_name_from_data_input>}\n",
-    "        summary='${data.summary}',\n",
+    "        summary=\"${data.summary}\",\n",
     "        # Declare which column of previous node output should be mapped to flow input\n",
     "        # the value pattern follows ${run.outputs.<column_name_from_data_input>}\n",
-    "        document='${run.outputs.answer}',\n",
+    "        document=\"${run.outputs.answer}\",\n",
     "        # Provide the connection values of the flow component\n",
     "        # The value of connection and deployment_name should align with your workspace connection settings.\n",
     "        connections={\n",
@@ -528,8 +537,8 @@
     "            \"score_coherence\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
     "                # \"deployment_name\": \"gpt-35-turbo\"\n",
-    "            }\n",
-    "        }\n",
+    "            },\n",
+    "        },\n",
     "    )\n",
     "\n",
     "    # Provide run settings of your flow component\n",
@@ -555,7 +564,7 @@
     "        # Bind the evaluation nodes outputs to the command component's input\n",
     "        eval_qna_rag_metrics_output_folder=eval_qna_rag_metrics_node.outputs.flow_outputs,\n",
     "        eval_perceived_intelligence_output_folder=eval_perceived_intelligence_node.outputs.flow_outputs,\n",
-    "        eval_summarization_output_folder=eval_summarization_node.outputs.flow_outputs\n",
+    "        eval_summarization_output_folder=eval_summarization_node.outputs.flow_outputs,\n",
     "    )\n",
     "\n",
     "    # Provide run settings of your flow component\n",
@@ -564,7 +573,10 @@
     "    # a Compute Cluster cannot be used, use a Serverless instance instead.\n",
     "    convert_parquet_node.compute = \"serverless\"\n",
     "    # Function return will be treated as pipeline output. This is not required.\n",
-    "    return {\"eval_results_output_folder\": convert_parquet_node.outputs.eval_results_output}\n",
+    "    return {\n",
+    "        \"eval_results_output_folder\": convert_parquet_node.outputs.eval_results_output\n",
+    "    }\n",
+    "\n",
     "\n",
     "# create pipeline instance\n",
     "pipeline_job_def = continuous_monitoring(pipeline_input_data=data_input)\n",
@@ -695,6 +707,15 @@
   }
  ],
  "metadata": {
+  "build_doc": {
+   "author": [
+    "loubigard@microsoft.com"
+   ],
+   "category": "azure",
+   "section": "Flow",
+   "weight": 40
+  },
+  "description": "A tutorial to create a pipeline using components to do continuous monitoring on a Gen AI application",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -711,7 +732,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.19"
-  }
+  },
+  "resources": "examples/flows/chat/chat-basic,examples/flows/evaluation/eval-qna-rag-metrics,examples/flows/evaluation/eval-perceived-intelligence,examples/flows/evaluation/eval-summarization"
  },
  "nbformat": 4,
  "nbformat_minor": 2
