--- a/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
+++ b/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
@@ -4,7 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Continuous Monitoring Pipeline\n",
+    "# Continuous Monitoring Pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This tutorial describes an advanced use case of [running flows in Azure ML Pipelines](../run-flow-with-pipeline/pipeline.ipynb).  \n",
     "The detailed explanations of the prerequisites and principles can be found in the aforementioned article.\n",
     "Continuous monitoring is necessary to maintain the quality, performance and efficiency of Generative AI applications.  \n",
