Update output path

--- a/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
+++ b/examples/tutorials/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
@@ -307,7 +307,7 @@
     "\n",
     "eval_results_output = Output(\n",
     "    # Provide custom flow output file path if needed\n",
-    "    path=\"azureml://datastores/<data_store_name>/paths/<path>\",\n",
+    "    #path=\"azureml://datastores/<data_store_name>/paths/<path>\",\n",
     "    type=AssetTypes.URI_FOLDER,\n",
     "    # rw_mount is suggested for flow output\n",
     "    mode=\"rw_mount\",\n",
@@ -534,15 +534,12 @@
     "            },\n",
     "            \"score_consistency\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
-    "                # \"deployment_name\": \"gpt-35-turbo\"\n",
     "            },\n",
     "            \"score_relevance\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
-    "                # \"deployment_name\": \"gpt-35-turbo\"\n",
     "            },\n",
     "            \"score_coherence\": {\n",
     "                \"connection\": \"azure_open_ai_connection\",\n",
-    "                # \"deployment_name\": \"gpt-35-turbo\"\n",
     "            },\n",
     "        },\n",
     "    )\n",
