Fix notebook section

--- a/examples/flows/integrations/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
+++ b/examples/flows/integrations/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
@@ -590,7 +590,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Submit the job"
+    "# 3.2.2 Submit the job"
    ]
   },
   {
