--- a/examples/flows/integrations/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
+++ b/examples/flows/integrations/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial describes an advanced use case of [running flows in Azure ML Pipelines](../run-flow-with-pipeline/pipeline.ipynb).  \n",
+    "This tutorial describes an advanced use case of [running flows in Azure ML Pipelines](../../../../tutorials/run-flow-with-pipeline/pipeline.ipynb).  \n",
     "The detailed explanations of the prerequisites and principles can be found in the aforementioned article.\n",
     "Continuous monitoring is necessary to maintain the quality, performance and efficiency of Generative AI applications.  \n",
     "These factors directly impact the user experience and operational costs.  \n",
@@ -21,7 +21,7 @@
     "- [Basic Chat](../../../flows/chat/chat-basic/)\n",
     "- [Q&A Evaluation](../../../flows/evaluation/eval-qna-rag-metrics/)\n",
     "- [Perceived Intelligence Evaluation](../../../flows/evaluation/eval-perceived-intelligence/)\n",
-    "- [Simple Summarization](../flows/standard/simple-summarization/)\n",
+    "- [Simple Summarization](./flows/standard/simple-summarization/)\n",
     "- [Summarization Evaluation](../../../flows/evaluation/eval-summarization/)\n",
     "\n",
     "![continuous_monitoring_pipeline.png](./media/continuous_monitoring_pipeline.png)\n"
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pf flow validate --source ../flows/standard/simple-summarization"
+    "!pf flow validate --source ./flows/standard/simple-summarization"
    ]
   },
   {
@@ -243,7 +243,7 @@
    "outputs": [],
    "source": [
     "simple_summarization_component = load_component(\n",
-    "    \"../flows/standard/simple-summarization/flow.dag.yaml\"\n",
+    "    \"./flows/standard/simple-summarization/flow.dag.yaml\"\n",
     ")"
    ]
   },
