Use absolute paths

--- a/examples/flows/integrations/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
+++ b/examples/flows/integrations/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
@@ -11,18 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This tutorial describes an advanced use case of [running flows in Azure ML Pipelines](../../../../tutorials/run-flow-with-pipeline/pipeline.ipynb).  \n",
+    "This tutorial describes an advanced use case of [running flows in Azure ML Pipelines](https://github.com/microsoft/promptflow/blob/main/examples/tutorials/run-flow-with-pipeline/pipeline.ipynb).  \n",
     "The detailed explanations of the prerequisites and principles can be found in the aforementioned article.\n",
     "Continuous monitoring is necessary to maintain the quality, performance and efficiency of Generative AI applications.  \n",
     "These factors directly impact the user experience and operational costs.  \n",
     "\n",
     "We will run evaluations on a basic chatbot flow, then aggregate the results to export and visualize the metrics.  \n",
     "The flows used in this pipeline are described below:\n",
-    "- [Basic Chat](../../../flows/chat/chat-basic/)\n",
-    "- [Q&A Evaluation](../../../flows/evaluation/eval-qna-rag-metrics/)\n",
-    "- [Perceived Intelligence Evaluation](../../../flows/evaluation/eval-perceived-intelligence/)\n",
+    "- [Basic Chat](https://github.com/microsoft/promptflow/tree/main/examples/flows/chat/chat-basic)\n",
+    "- [Q&A Evaluation](https://github.com/microsoft/promptflow/tree/main/examples/flows/evaluation/eval-qna-rag-metrics)\n",
+    "- [Perceived Intelligence Evaluation](https://github.com/microsoft/promptflow/tree/main/examples/flows/evaluation/eval-perceived-intelligence)\n",
     "- [Simple Summarization](./flows/standard/simple-summarization/)\n",
-    "- [Summarization Evaluation](../../../flows/evaluation/eval-summarization/)\n",
+    "- [Summarization Evaluation](https://github.com/microsoft/promptflow/tree/main/examples/flows/evaluation/eval-summarization)\n",
     "\n",
     "![continuous_monitoring_pipeline.png](./media/continuous_monitoring_pipeline.png)\n"
    ]
