Moved folder and addressed comments

--- a/examples/flows/integrations/unify-ai/flex-flow-quickstart-unify-ai.ipynb
+++ b/examples/flows/integrations/unify-ai/flex-flow-quickstart-unify-ai.ipynb
@@ -222,7 +222,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
-    "from code_quality_unify_ai import CodeEvaluator\n",
+    "from eval_code_flow.code_quality_unify_ai import CodeEvaluator\n",
     "\n",
     "\n",
     "evaluator = CodeEvaluator(model_config=model_config)\n",
@@ -319,7 +319,7 @@
    "outputs": [],
    "source": [
     "# we can also run flow pointing to code evaluator yaml file\n",
-    "eval_flow = \"./code-eval-flow.flex.yaml\"\n",
+    "eval_flow = \"./eval_code_flow/code-eval-flow.flex.yaml\"\n",
     "\n",
     "eval_run = pf.run(\n",
     "    flow=eval_flow,\n",
