Fix Continuous Monitoring notebook metadata

--- a/examples/flows/integrations/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
+++ b/examples/flows/integrations/continuous-monitoring-with-pipeline/monitoring/continuous_monitoring_pipeline.ipynb
@@ -711,7 +711,7 @@
  "metadata": {
   "build_doc": {
    "author": [
-    "loubigard@microsoft.com"
+    "loubigard@github.com"
    ],
    "category": "azure",
    "section": "Flow",
