fix broken links

--- a/examples/tutorials/tracing/autogen-groupchat/trace-autogen-groupchat.ipynb
+++ b/examples/tutorials/tracing/autogen-groupchat/trace-autogen-groupchat.ipynb
@@ -15,8 +15,6 @@
     "AutoGen offers conversable agents powered by LLM, tool or human, which can be used to perform tasks collectively via automated chat. This framework allows tool use and human participation through multi-agent conversation.\n",
     "Please find documentation about this feature [here](https://microsoft.github.io/autogen/docs/Use-Cases/agent_chat).\n",
     "\n",
-    "This notebook is modified based on [autogen agent chat example](https://github.com/microsoft/autogen/blob/main/notebook/agentchat_groupchat.ipynb). \n",
-    "\n",
     "**Learning Objectives** - Upon completing this tutorial, you should be able to:\n",
     "\n",
     "- Trace LLM (OpenAI) Calls and visualize the trace of your application.\n",
@@ -45,7 +43,7 @@
     "\n",
     "You can create the config file named `OAI_CONFIG_LIST.json` from example file: `OAI_CONFIG_LIST.json.example`.\n",
     "\n",
-    "Below code use the [`config_list_from_json`](https://microsoft.github.io/autogen/docs/reference/oai/openai_utils#config_list_from_json) function loads a list of configurations from an environment variable or a json file. \n"
+    "Below code use the [`config_list_from_json`](https://microsoft.github.io/autogen/0.2/docs/reference/oai/openai_utils/#config_list_from_json) function loads a list of configurations from an environment variable or a json file. \n"
    ]
   },
   {
